...
                }}
              >
                <Feather color={theme.colors.fontColor} name="edit" size={24} />
              </TouchableOpacity>

              <TouchableOpacity
                testID="delete-icon"
                onPress={() => {
                  if (car.id) {
                    Alert.alert("Deletar Upgrade", "Você tem certeza?", [
                      {
                        text: "Não",
                        style: "cancel",
...
