appId: host.exp.exponent
---
- openLink: exp://127.0.0.1:8081

- tapOn: "Digite seu email"

- inputText: "gearhead@example.com"

- tapOn: "Sua senha"

- inputText: "password123"

- hideKeyboard

- tapOn: "Entrar"

- assertVisible: "FuscaRed72"
